--- a/src/peerblock/pb.vcproj
+++ b/src/peerblock/pb.vcproj
@@ -337,7 +337,7 @@
 			/>
 		</Configuration>
 		<Configuration
-			Name="Release (Vista)|Win32"
+			Name="Release_(Vista)|Win32"
 			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
 			ConfigurationType="1"
 			InheritedPropertySheets="..\..\build\windows\common.vsprops;..\..\build\windows\release.vsprops"
@@ -411,7 +411,7 @@
 			/>
 		</Configuration>
 		<Configuration
-			Name="Release (Vista)|x64"
+			Name="Release_(Vista)|x64"
 			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
 			ConfigurationType="1"
 			InheritedPropertySheets="..\..\build\windows\common.vsprops;..\..\build\windows\release.vsprops"
@@ -486,7 +486,7 @@
 			/>
 		</Configuration>
 		<Configuration
-			Name="Debug (Vista)|Win32"
+			Name="Debug_(Vista)|Win32"
 			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
 			IntermediateDirectory="$(SolutionDir)Intermediate\obj\$(ConfigurationName) $(PlatformName)\$(ProjectName)\"
 			ConfigurationType="1"
@@ -570,7 +570,7 @@
 			/>
 		</Configuration>
 		<Configuration
-			Name="Debug (Vista)|x64"
+			Name="Debug_(Vista)|x64"
 			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
 			IntermediateDirectory="$(SolutionDir)Intermediate\obj\$(ConfigurationName) $(PlatformName)\$(ProjectName)\"
 			ConfigurationType="1"
@@ -766,7 +766,7 @@
 				RelativePath=".\pbfilter_nt.cpp"
 				>
 				<FileConfiguration
-					Name="Release (Vista)|Win32"
+					Name="Release_(Vista)|Win32"
 					ExcludedFromBuild="true"
 					>
 					<Tool
@@ -774,7 +774,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="Release (Vista)|x64"
+					Name="Release_(Vista)|x64"
 					ExcludedFromBuild="true"
 					>
 					<Tool
@@ -782,7 +782,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="Debug (Vista)|Win32"
+					Name="Debug_(Vista)|Win32"
 					ExcludedFromBuild="true"
 					>
 					<Tool
@@ -790,7 +790,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="Debug (Vista)|x64"
+					Name="Debug_(Vista)|x64"
 					ExcludedFromBuild="true"
 					>
 					<Tool
@@ -894,7 +894,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="Release (Vista)|Win32"
+					Name="Release_(Vista)|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -902,7 +902,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="Release (Vista)|x64"
+					Name="Release_(Vista)|x64"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -910,7 +910,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="Debug (Vista)|Win32"
+					Name="Debug_(Vista)|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -918,7 +918,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="Debug (Vista)|x64"
+					Name="Debug_(Vista)|x64"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
